cmake_minimum_required(VERSION 3.26)
project(proj2023)

set(CMAKE_CXX_STANDARD 17)

add_executable(proj2023 main.cpp
        Student.h
        Student.cpp
        Uc.h
        Uc.cpp
        Classs.h
        Classs.cpp
        ClassesPerUcLoad.h
        PovoateClassesLoad.h
        ClassesScheduleLoad.h
        Menu.h
        AuxiliarFunctions.h
        Aula.h
        Opperation.h
)


